Update local_baseline